manual-kubernetes-on-arm/modules/vpc/subnets.tf
resource "aws_subnet" "private" {
  for_each = local.subnet_availability_zones

  vpc_id            = aws_vpc.this.id
  availability_zone = each.key

  assign_ipv6_address_on_creation = true
  enable_dns64                    = true

  enable_resource_name_dns_a_record_on_launch    = true
  enable_resource_name_dns_aaaa_record_on_launch = true

  cidr_block      = cidrsubnet(aws_vpc.this.cidr_block, 8, each.value)
  ipv6_cidr_block = cidrsubnet(aws_vpc.this.ipv6_cidr_block, 8, each.value)

  tags = {
    Name                                = "${var.name}-private-${each.key}"
    "kubernetes.io/cluster/${var.name}" = "owned"
  }
}

resource "aws_subnet" "public" {
  for_each = local.subnet_availability_zones

  vpc_id            = aws_vpc.this.id
  availability_zone = each.key

  assign_ipv6_address_on_creation = true
  enable_dns64                    = false

  enable_resource_name_dns_a_record_on_launch    = true
  enable_resource_name_dns_aaaa_record_on_launch = true

  cidr_block      = cidrsubnet(aws_vpc.this.cidr_block, 8, each.value + 16)
  ipv6_cidr_block = cidrsubnet(aws_vpc.this.ipv6_cidr_block, 8, each.value + 16)

  tags = {
    Name = "${var.name}-public-${each.key}"
  }
}
